--- a/test/fixtures/order_items.yml
+++ b/test/fixtures/order_items.yml
@@ -1,15 +1,17 @@
 # == Schema Information
 #
-# Table name: stores
+# Table name: order_items
 #
 #  id         :bigint           not null, primary key
-#  name       :string
-#  address    :string
-#  phone      :string
-#  deleted_at :datetime
+#  order_id   :bigint
+#  cart_id    :bigint
+#  product_id :bigint
+#  variant_id :bigint
+#  title      :string
+#  quantity   :integer
+#  price      :decimal(12, 2)
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
-#  code       :string
 #
 
 # This model initially had no columns defined. If you add columns to the
